@@ -1,3 +1,8 @@
+2006-02-12  Wolfgang Baer  <WBaer@gmx.de>
+
+	* java/rmi/MarshalledObject.java: Reformatted.
+	* java/rmi/Naming.java: Likewise.	
+
 2006-02-12  Jeroen Frijters  <jeroen@frijters.net>
 
 	* java/io/InputStream.java
